# RandomFactsQuiz

./: .gitignore  pyproject.toml
.github/workflows/: python-ci.yaml  python-poetry-ci.yml
app/: app.py
docs/: index.html  openapi.yaml
locust/: locustfile.py
tests/selenium/: test.py
tests/unit/: test_quiz.py
